# esp-hal-embassy-wifi-demo

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: main.rs
