[package]
name = "esp-hal-embassy-wifi-demo"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-alloc = { version = "0.4.0" }
esp-backtrace = { version = "0.13.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = ["async"] }
esp-hal-embassy = { version = "0.2.0", features = [] }
esp-println = { version = "0.10.0", features = ["log"] }
esp-wifi = { version = "0.7.1", features = [
    "phy-enable-usb",
    "utils",
    "wifi",
    "wifi-default",
    "async",
    "embassy-net",
] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-time-driver = { version = "0.1.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
fugit = "0.3"
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = { version = "2.1.0" }

# SmartLED libraries
esp-hal-smartled = { version = "0.12.0", optional = true }
smart-leds = { version = "0.4", optional = true }

[features]
# default = ["esp32s3", "smartled"]
esp32s3 = [
    "esp-backtrace/esp32s3",
    "esp-hal/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println/esp32s3",
    "esp-wifi/esp32s3",
]
esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-hal/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println/esp32c6",
    "esp-wifi/esp32c6",
]
smartled = ["esp-hal-smartled", "smart-leds"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
